fix overflow

--- a/assets/css/header.scss
+++ b/assets/css/header.scss
@@ -3,14 +3,14 @@
   .brand { -webkit-transform: scale(0.5); top: -26px !important; }
 }
 
-
 .mobile-bg-container{
     width: 100%;
     min-height: 100%;
-    position: absolute;
+    position: fixed;
     -webkit-transform: translateZ(0);
     transform: translateZ(0);
     display: none;
+    opacity: 0;
     
     @media (min-width: $break-big) {
         display: none;
@@ -18,6 +18,7 @@
     
     &.visible {
         display: block;
+        opacity: 1;
 
         @media (min-width: $break-big) {
             display: none;
